--- a/public/schedule.html
+++ b/public/schedule.html
@@ -169,7 +169,7 @@
                                 <div class="card-body">
                                     <div class="row">
                                         <div class="col-md-6 align-self-center">
-                                            <h3 class="headline-event-tight">Profile</h3>
+                                            <h3 class="headline-event-tight">Isfa Ganteng</h3>
                                             <div class="cds-message text-muted">
                                                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium
                                                 non.
