--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
         <div class="navbar-nav ml-auto">
           <a class="nav-item nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
           <a class="nav-item nav-link" href="schedule.html">Schedule</a>
-          <a class="nav-item nav-link" href="#">Speakers</a>
+          <a class="nav-item nav-link" href="speakers.html">Speakers</a>
         </div>
       </div>
     </div>
