--- a/public/schedule.html
+++ b/public/schedule.html
@@ -37,7 +37,7 @@
                     <a class="nav-item nav-link" href="index.html">Home</a>
                     <a class="nav-item nav-link active" href="schedule.html">Schedule <span
                             class="sr-only">(current)</span></a>
-                    <a class="nav-item nav-link" href="#">Speakers</a>
+                    <a class="nav-item nav-link" href="speakers.html">Speakers</a>
                 </div>
             </div>
         </div>
