--- a/public/speakers.html
+++ b/public/speakers.html
@@ -12,13 +12,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Domine:wght@400;700&family=Roboto:wght@400;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="dark-mode.css">
     <link rel="stylesheet" href="style.css">
 
     <title>Chrome Dev Summit Extended 2020 - Chapter Indonesia</title>
 </head>
 
-<body class="mt-5">
-    <nav class="navbar fixed-top navbar-expand-lg navbar-light">
+<body class="mt-5 bg-white">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white">
         <div class="container">
             <a class="navbar-brand" href="#">
                 <img src="https://developer.chrome.com/devsummit/assets/site-logo-5b1107ca.png" width="40">
@@ -26,24 +27,30 @@
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <span class="fa fa-bars"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="collapse navbar-collapse bg-white" id="navbarNavAltMarkup">
                 <div class="navbar-nav d-none d-md-block">
                     <a class="nav-item btn btn-primary rounded-button" href="https://google.com/"><i
                             class="fa fa-share-square"></i> Register Now</a>
                 </div>
                 <div class="navbar-nav ml-auto">
-                    <a class="nav-item nav-link" href="index.html">Home</a>
-                    <a class="nav-item nav-link" href="schedule.html">Schedule</a>
+                    <a class="nav-item nav-link text-secondary" href="index.html">Home</a>
+                    <a class="nav-item nav-link text-secondary" href="schedule.html">Schedule</a>
                     <a class="nav-item nav-link active" href="speakers.html">Speakers <span
                             class="sr-only">(current)</span></a>
+                </div>
+                <div class="theme-switch-wrapper">
+                    <label class="theme-switch" for="darkSwitch">
+                        <input type="checkbox" id="darkSwitch" />
+                        <div class="slider round"></div>
+                    </label>
                 </div>
             </div>
         </div>
     </nav>
 
-    <section id="schedule" class="pt-5">
+    <section id="schedule" class="pt-4">
         <div class="jumbotron jumbotron-fluid bg-white">
             <div class="container">
                 <div class="row">
@@ -150,7 +157,7 @@
     <footer class="text-lg-start">
         <div class="container">
             <div class="row">
-                <div class="col-md-8 align-self-center text-logo text-muted">
+                <div class="col-md-8 align-self-center text-logo text-dark">
                     <img src="https://devfestindonesia.com/_nuxt/img/logo.444364e.png" alt="GDG Indonesia" width="80px">
                     GDG Indonesia
                 </div>
@@ -195,6 +202,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
+    <script src="https://coliff.github.io/dark-mode-switch/dark-mode-switch.min.js"></script>
 </body>
 
 </html>
