replace speakers card with a new one

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
 <body class="mt-5 bg-white">
   <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white">
     <div class="container">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="index.html">
         <img src="https://developer.chrome.com/devsummit/assets/site-logo-5b1107ca.png" width="40">
         Dev Summit Extended
       </a>
@@ -31,7 +31,7 @@
       </button>
       <div class="collapse navbar-collapse bg-white" id="navbarNavAltMarkup">
         <div class="navbar-nav d-none d-md-block">
-          <a class="nav-item btn btn-primary rounded-button" href="https://google.com/"><i
+          <a target="_blank" class="nav-item btn btn-primary rounded-button" href="https://google.com/"><i
               class="fa fa-share-square"></i> Register Now</a>
         </div>
         <div class="navbar-nav ml-auto">
