--- a/public/speakers.html
+++ b/public/speakers.html
@@ -21,7 +21,7 @@
 <body class="mt-5 bg-white">
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white">
         <div class="container">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="index.html">
                 <img src="https://developer.chrome.com/devsummit/assets/site-logo-5b1107ca.png" width="40">
                 Dev Summit Extended
             </a>
@@ -31,7 +31,7 @@
             </button>
             <div class="collapse navbar-collapse bg-white" id="navbarNavAltMarkup">
                 <div class="navbar-nav d-none d-md-block">
-                    <a class="nav-item btn btn-primary rounded-button" href="https://google.com/"><i
+                    <a target="_blank" class="nav-item btn btn-primary rounded-button" href="https://google.com/"><i
                             class="fa fa-share-square"></i> Register Now</a>
                 </div>
                 <div class="navbar-nav ml-auto">
@@ -65,89 +65,76 @@
     <section id="content" class="pb-5">
         <div class="container">
             <div class="card-columns">
-                <div class="card mb-4">
+                <div class="card schedule mb-4">
+                    <img src="http://placehold.it/64x40" class="card-img-top">
                     <div class="card-body">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-md">
-                                    <img src="http://placehold.it/64x64" class="rounded-circle">
-                                </div>
-                            </div>
-                        </div>
-                        <h5 class="card-title">Card title</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                            of the card's content.</p>
-                        <a href="#" class="card-link">Card link</a>
-                        <a href="#" class="card-link">Another link</a>
+                        <h5 class="card-title">Muh Isfhani Ghiath</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">Sr. Software Engineer @ Tokopedia</h6>
+                        <a href="#" class="card-link"><i class="fa fa-linkedin"></i></a>
+                        <a href="#" class="card-link"><i class="fa fa-twitter"></i></a>
                     </div>
                 </div>
-                <div class="card mb-4">
+                <div class="card schedule mb-4">
+                    <img src="http://placehold.it/64x40" class="card-img-top">
                     <div class="card-body">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-md">
-                                    <img src="http://placehold.it/64x64" class="rounded-circle">
-                                </div>
-                            </div>
-                        </div>
-                        <h5 class="card-title">Card title</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                            of the card's content.</p>
-                        <a href="#" class="card-link">Card link</a>
-                        <a href="#" class="card-link">Another link</a>
+                        <h5 class="card-title">Muh Isfhani Ghiath</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">Sr. Software Engineer @ Tokopedia</h6>
+                        <a href="#" class="card-link"><i class="fa fa-linkedin"></i></a>
+                        <a href="#" class="card-link"><i class="fa fa-twitter"></i></a>
                     </div>
                 </div>
-                <div class="card mb-4">
+                <div class="card schedule mb-4">
+                    <img src="http://placehold.it/64x40" class="card-img-top">
                     <div class="card-body">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-md">
-                                    <img src="http://placehold.it/64x64" class="rounded-circle">
-                                </div>
-                            </div>
-                        </div>
-                        <h5 class="card-title">Card title</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                            of the card's content.</p>
-                        <a href="#" class="card-link">Card link</a>
-                        <a href="#" class="card-link">Another link</a>
+                        <h5 class="card-title">Muh Isfhani Ghiath</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">Sr. Software Engineer @ Tokopedia</h6>
+                        <a href="#" class="card-link"><i class="fa fa-linkedin"></i></a>
+                        <a href="#" class="card-link"><i class="fa fa-twitter"></i></a>
                     </div>
                 </div>
-                <div class="card mb-4">
+                <div class="card schedule mb-4">
+                    <img src="http://placehold.it/64x40" class="card-img-top">
                     <div class="card-body">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-md">
-                                    <img src="http://placehold.it/64x64" class="rounded-circle">
-                                </div>
-                            </div>
-                        </div>
-                        <h5 class="card-title">Card title</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                            of the card's content.</p>
-                        <a href="#" class="card-link">Card link</a>
-                        <a href="#" class="card-link">Another link</a>
+                        <h5 class="card-title">Muh Isfhani Ghiath</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">Sr. Software Engineer @ Tokopedia</h6>
+                        <a href="#" class="card-link"><i class="fa fa-linkedin"></i></a>
+                        <a href="#" class="card-link"><i class="fa fa-twitter"></i></a>
                     </div>
                 </div>
-                <div class="card mb-4">
+                <div class="card schedule mb-4">
+                    <img src="http://placehold.it/64x40" class="card-img-top">
                     <div class="card-body">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-md">
-                                    <img src="http://placehold.it/64x64" class="rounded-circle">
-                                </div>
-                            </div>
-                        </div>
-                        <h5 class="card-title">Card title</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                            of the card's content.</p>
-                        <a href="#" class="card-link">Card link</a>
-                        <a href="#" class="card-link">Another link</a>
+                        <h5 class="card-title">Muh Isfhani Ghiath</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">Sr. Software Engineer @ Tokopedia</h6>
+                        <a href="#" class="card-link"><i class="fa fa-linkedin"></i></a>
+                        <a href="#" class="card-link"><i class="fa fa-twitter"></i></a>
+                    </div>
+                </div>
+                <div class="card schedule mb-4">
+                    <img src="http://placehold.it/64x40" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Muh Isfhani Ghiath</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">Sr. Software Engineer @ Tokopedia</h6>
+                        <a href="#" class="card-link"><i class="fa fa-linkedin"></i></a>
+                        <a href="#" class="card-link"><i class="fa fa-twitter"></i></a>
+                    </div>
+                </div>
+                <div class="card schedule mb-4">
+                    <img src="http://placehold.it/64x40" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Muh Isfhani Ghiath</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">Sr. Software Engineer @ Tokopedia</h6>
+                        <a href="#" class="card-link"><i class="fa fa-linkedin"></i></a>
+                        <a href="#" class="card-link"><i class="fa fa-twitter"></i></a>
+                    </div>
+                </div>
+                <div class="card schedule mb-4">
+                    <img src="http://placehold.it/64x40" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Muh Isfhani Ghiath</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">Sr. Software Engineer @ Tokopedia</h6>
+                        <a href="#" class="card-link"><i class="fa fa-linkedin"></i></a>
+                        <a href="#" class="card-link"><i class="fa fa-twitter"></i></a>
                     </div>
                 </div>
             </div>
